--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ a:hover {
 	  
 	.overlay {
         z-index: 100;
-		position: fixed;
+		position: relative;
 		width: 100%;
 		top: 0;
 		background-color: #ecc3ec;
