--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 
 html {
     box-sizing: border-box;
+	width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 .header {
