--- a/style.css
+++ b/style.css
@@ -2,11 +2,6 @@
 
 html {
     box-sizing: border-box;
-	width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
 }
 
 .header {
@@ -43,6 +38,7 @@ a:hover {
     display: flex;
     height: 100px;
     margin-left: auto;
+    overflow-x: hidden; 
 }
 
 @media only screen and (max-width: 1000px) {
@@ -75,7 +71,7 @@ a:hover {
 	  
 	.overlay {
         z-index: 100;
-		position: relative;
+		position: fixed;
 		width: 100%;
 		top: 0;
 		background-color: #ecc3ec;
