--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap');
 
-html {
+html, body {
     box-sizing: border-box;
+    width: 100%;
+    margin: 0;
 }
 
 .header {
@@ -11,18 +13,19 @@ html {
     font-family: 'Oleo Script', cursive;
     border-style: groove;
     height: 100px;
+    width: 100%;
 }
 
 .nav {
-    display: flex;
     list-style: none;
-    position: absolute;
+    position: relative;
+    width: 100%;
 }
 
 li {
     font-size: 1.5rem;
-    word-spacing: 15px;
     padding: 15px;
+    float: left;
 }
 
 a {
@@ -39,6 +42,7 @@ a:hover {
     height: 100px;
     margin-left: auto;
     overflow-x: hidden; 
+    width: auto;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -49,6 +53,8 @@ a:hover {
         left: 70%;
         margin-left: -150px;
         position: absolute;
+        height: 12vh;
+        width: auto;
     }
     * {
         position: relative;
@@ -146,11 +152,6 @@ a:hover {
     align-self: start;
     margin-top: 60px;
     box-shadow: 3px 3px darkcyan;
-}
-
-body {
-    margin: 0;
-    min-height: 100vh;
 }
 
 .featured-container {
